@@ -1,3 +1,7 @@
+2013-01-28  Andy Buckley  <andy.buckley@cern.ch>
+
+	* More methods, and public access to most data members on AlphaS.
+
 2013-01-25  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding sorting of the flavor array when reading from metadata
